fix logo, featured recipe spacing and project name

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -352,7 +352,7 @@ form > *:last-child {
   align-items: center;
 }
 .nav-header img {
-  width: 200px;
+  width: 150px;
   margin-left: -6px;
   margin-bottom: -9px;
 }
